# hierarchical-message-passing-with-curriculum-weighting-for-molecular-toxicity

./: .gitignore  FIXES_APPLIED.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  pyproject.toml  requirements.txt
configs/: ablation.yaml  default.yaml
results/: results.json
scripts/: evaluate.py  predict.py  train.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/: __init__.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/data/: __init__.py  loader.py  preprocessing.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/evaluation/: __init__.py  analysis.py  metrics.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/models/: __init__.py  components.py  model.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/training/: __init__.py  trainer.py
src/hierarchical_message_passing_with_curriculum_weighting_for_molecular_toxicity/utils/: __init__.py  config.py
tests/: __init__.py  conftest.py  test_data.py  test_model.py  test_training.py
